alignment issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,14 +110,14 @@ h2 {
 }
 
 .one {
-  width: 160px;
-  height: 160px;
+  width: 100%;
+  -height: 160px;
   position: relative;
 }
 
 .two {
-  width: 160px;
-  height: 160px;
+  width: 100%;
+  -height: 160px;
   position: absolute;
   transition: opacity .2s ease-in-out;
   -moz-transition: opacity .2s ease-in-out;
